[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Dalay Salchak <okeanol777@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.10.1"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]